# MA_2026

./: .gitignore  CMakeLists.txt  auto_start.bash  readme.md
calibration/: calibrate_camera.cpp  capture.cpp
configs/: calibration.yaml  main.yaml  uav.yaml
io/: cboard.cpp  cboard.hpp
io/gimbal/: gimbal.hpp
io/ros2/sentry/: CMakeLists.txt  package.xml
io/ros2/sentry/include/sentry/: node.hpp
io/ros2/sentry/msg/: Receive.msg
io/ros2/sentry/src/: node.cpp
src/: CMakeLists.txt  main.cpp  main_debug.cpp  sentry.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  shooter.cpp  target.cpp  target.hpp  tracker.cpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: buff_aimer.cpp  buff_aimer.hpp  yolo11_buff.cpp
tests/: auto_aim_test.cpp  camera_detect_test.cpp  camera_test.cpp  cboard_test.cpp  detector_video_test.cpp
tools/: crc.cpp  crc.hpp  img_tools.cpp  img_tools.hpp
